Vision Pro website

--- a/templates/room.html
+++ b/templates/room.html
@@ -30,7 +30,7 @@
 </head>
 <body class="bg-gray-100 text-gray-900 tracking-wider leading-normal">
     <div class="video-feed">
-        <!-- This will eventually be where the user's video feed appears -->
+        <!-- This will eventually be where the user's video feed appears, one day, maybe... -->
         <div class="video-placeholder">Your Video Stream</div>
     </div>
     <div class="user-controls">
