Vision Pro website

--- a/templates/room.html
+++ b/templates/room.html
@@ -9,8 +9,8 @@
         .video-feed {
             position: relative;
             width: 100%;
-            height: 500px; /* adjust as needed */
-            background-color: black; /* placeholder */
+            height: 500px;
+            background-color: black;
             display: flex;
             justify-content: center;
             align-items: center;
